iidy/tests/snapshots/error_examples_snapshots__tag_map_uses_transform_error.snap
---
source: tests/error_examples_snapshots.rs
expression: error_output
---
Tag error: 'transform' should be 'template' @ example-templates/errors/tag-map-uses-transform.yaml:7:3 (errno: IY4002)
  -> use 'template' instead of 'transform' in !$map tags

   6 |   items: !$ services
   7 |   transform: "{{item}}-config"
     |   ^^^^^^^^^

   example:
   !$map
     items: [1, 2, 3]
     template: "{{item}}"
   For more info, run: iidy explain IY4002
